# vnlb

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/modules/: FindCBLAS.cmake.old  FindLAPACKE.cmake  FindMKL.cmake
lib/iio/: CMakeLists.txt
lib/tvl1flow/: CMakeLists.txt  Makefile  main.c  main_mesure.c  tvl1flow_lib.c
scripts/: CMakeLists.txt  tvl1flow-seq.sh  vnlb-gt.sh  vnlb.sh
src/: CMakeLists.txt  awgn.cpp  cmd_option.h  main_vnlb.cpp  psnr.cpp
src/VNLBayes/: CMakeLists.txt  LibMatrix.cpp  LibMatrix.h  VideoNLBayes.cpp  VideoNLBayes.h
src/VidUtils/: CMakeLists.txt  LibVideoT.cpp  LibVideoT.hpp  mt19937ar.c  mt19937ar.h
